# decomp

./: CMakeLists.txt  package.xml
source/decomp/: output.cpp  output.hpp
test/: decomposition.cpp
